# AutoAudit

./: .env.example  .gitignore  README.md  build.py  compliance.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/compliance_guard/: __init__.py  __main__.py
src/compliance_guard/cli/: __init__.py  app.py
src/compliance_guard/compliance/: __init__.py  analyzer.py  models.py  standards.py
src/compliance_guard/config/: __init__.py  settings.py
src/compliance_guard/fixing/: __init__.py  applier.py  paths.py  prompts.py
src/compliance_guard/indexing/: __init__.py  index_builder.py  models.py
src/compliance_guard/llm/: __init__.py  base.py  gemini_client.py  prompts.py
src/compliance_guard/rag/: __init__.py  chunking.py  context_builder.py  embeddings.py  qa_service.py
src/compliance_guard/reporting/: __init__.py  aggregator.py  cli_table.py  json_report.py  markdown_report.py
src/compliance_guard/scanner/: __init__.py  exclusions.py  file_scanner.py
src/compliance_guard/security/: __init__.py  redactor.py
src/compliance_guard/ui/: app.py  run.py
tests/: __init__.py  test_chunker.py  test_fixing_paths.py  test_redactor.py  test_scanner.py
